contrast-finder-webapp/src/main/webapp/Css/30-color-finder.css
/* HTML componants override */ 
body {
    background-color: #F6F6F6;
}

a {
    color : #3173BD;   /* AA  */
    color : #0A52A4;   /* AAA */
}

/* Bootstrap override */ 
.help-block {
    font-size : 12px;
    color: #5A5A5A; /* AA */
    color: #5A5151; /* AAA */
}
.alert-warning {
    color: #6c4a1e; 
}
.alert-warning .alert-link {
    color: #6b4b0a;
}
/* Form view*/

#lang-switcher {
    text-align: right;
    position:relative;
    top: -2em;
}

.noResult {
    text-align: center;
    font-size: 20px;
}

.h2-on-empty-result {
    margin-top: 70px;
}

#tested-color {
    font-size: 20px;
}

#notSatisfied {
    margin-top: 60px;
    text-align: center;
    font-size: 20px;
}

.logo {
    float: right;
    width: 10%;
    padding: 5px;
    position: absolute;
}

#contrast-finder-logo {
    background-image: url("../Images/contrast_finder_logo.png");
    background-size: 100%;
    float: left;
    width: 150px;
    height: 150px;
    background-repeat: no-repeat;
    margin-right: 15px;
    margin-top: -35px;
}

#initial-contrast {
    margin-bottom: 3px;
}

.cercle{
    float:right;
    width:100px;
    height:55px;
    border-radius: 0.3em;
    margin-right: 5px;
    border: solid 1px #CCC;
}

.text-sample {
    border: solid 1px #CCC;
}

.color-sample{
    width:7em;
    height:2.5em;
    border-radius: 0.3em;
    margin-right: 5px;
}

.control-fieldset legend {
    border: none;
    font-size: 14px;
    font-weight: bold;
    text-align: right;
}

.cf-group-fields {
    border: 1px solid #CCC;
    border-radius: 4px;
    padding: 1px 1px 1px 14px;
}

.radio.first-radio {
    padding-top: 0;
}

.highRatioCheckBox{
    padding-top:10px;
}

.color-codes {
    font-size:0.95em;
    list-style: none;
    padding: 0;
}
.invalid-color {
    color : #b94a48;
    display : none;
}
.sample-bordered {
    border : solid 1px #CCC;
}
.form-control.error {
    border-color: #b94a48;
}
@media (min-width: 1200px) {
    .invalid-color {
        margin-left: -15px;
        margin-top: 7px;
    }
}
@media (max-width: 1199px) {
    .control-fieldset legend {
        text-align: left;
        margin-bottom: 0;
    }
    .color-sample {
        margin-left: 15px;
    }
}
/*#scroll-test.affix {
    z-index: 1;
    position: fixed;
    top: 0px;
    background: linear-gradient(#f4f4f4,#f8f8f8);
}*/
#old-contrast.affix {
    z-index: 1;
    background-color: #f6f6f6;
    top : 0;
}
@media (min-width: 768px) {
    #old-contrast.affix {
        width: 750px;
    }
}

@media (min-width: 992px) {
    #old-contrast.affix {
        width: 970px;
    }
}

@media (min-width: 1200px) {
    #old-contrast.affix {
        width: 1170px;
    }
}

.col01 {width:22%;}
.col02 {width:22%;}
.col03 {width:6%;}
.col05 {width:8%;}
.text-sample p {margin:0}

#image-reference {
    margin-left: 43.833333%;
}
@media screen and (min-width:1200px) {
    #image-reference {
        margin-left: 36.333333%;
    }   
}
@media (max-width: 992px) {
    #image-reference {
        margin-left: 56.633333%;
    }
}

/* footer template */
footer {
    padding-top: 0;
    text-align: center;
    margin-top: 120px;
    margin-bottom: 3em;
    border-top: none;
    font-size: 13px;
}

#footer-msg {
    /* text-align: left; */
    font-size: 18px;
}
#footer-copyright {
    margin-top: 6em;
}

/* header template */
#header h1 {
    margin-top: 0;
}

